<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.invvoo.swoosh.Controller.ServiceActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/desiredleaguebg" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/i_need"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="254dp"
        android:layout_height="197dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ToggleButton
            android:id="@+id/interpreterButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/swoosh_toggle"
            android:fontFamily="@font/abeezee"
            android:onClick="onInterpreterClicked"
            android:text="@string/an_interpreter"
            android:textColor="@android:color/white"
            android:textOff="@string/an_interpreter"
            android:textOn="@string/an_interpreter"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:text="ex: Sound clip, phone call, recording"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <ToggleButton
            android:id="@+id/translatorButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/swoosh_toggle"
            android:fontFamily="@font/abeezee"
            android:onClick="onTranslatorClicked"
            android:text="@string/a_translator"
            android:textColor="@android:color/white"
            android:textOff="@string/a_translator"
            android:textOn="@string/a_translator"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:text="@string/text_signs_menus_documents"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <ToggleButton
            android:id="@+id/bothButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16sp"
            android:background="@drawable/swoosh_toggle"
            android:fontFamily="@font/abeezee"
            android:onClick="onBothClicked"
            android:text="Both!"
            android:textColor="@android:color/white"
            android:textOff="Both!"
            android:textOn="Both!"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:text="Video call a translator."
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/serviceNextBtn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/swoosh_button"
        android:fontFamily="@font/abeezee"
        android:onClick="serviceNextClicked"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/vendorApplyButton"
        android:layout_width="265dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/swoosh_button"
        android:fontFamily="@font/abeezee"
        android:onClick="applyVendorClicked"
        android:text="@string/i_am_biligual_and_want_easy_cash"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee"
        android:text="looking for work as a translator?"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/vendorApplyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceNextBtn"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceNextBtn"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo2" />

</androidx.constraintlayout.widget.ConstraintLayout>